--- a/src/style/style.css
+++ b/src/style/style.css
@@ -26,13 +26,18 @@ body {
 }
 
 .form__input {
-  display: block;
   min-width: 300px;
+  position: relative;
   border-radius: 20px;
   padding: 15px 15px;
   font-size: 16px;
   margin-bottom: 10px;
   border: 0.5px solid #000;
+  outline: none;
+  transition: all 0.3s;
+}
+.form__input:focus {
+  box-shadow: 0px 0px 30px 4px rgba(34, 60, 80, 0.2);
 }
 .form__submit {
   height: 40px;
@@ -51,6 +56,9 @@ body {
 }
 .form__submit:hover {
   background: rgb(95, 184, 95);
+}
+.form__wrapper {
+  margin-bottom: 10px;
 }
 
 .weather__container {
@@ -72,6 +80,8 @@ body {
   border-radius: 20px;
   background-color: #7aaed8;
   color: #fff;
+  display: flex;
+  flex-direction: column;
 }
 .item__title {
   text-align: center;
@@ -79,15 +89,18 @@ body {
   margin-bottom: 10px;
 }
 .item__current-temp {
+  flex: 1 1 auto;
   font-size: 18px;
   margin-bottom: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid #fff;
 }
 .item__current-temp span {
-  display: block;
   text-align: center;
-  font-size: 80px;
+  font-size: 70px;
+}
+.item__current-temp img {
+  flex: 1 1 50%;
 }
 .item__short-decr {
   font-size: 16px;
@@ -135,6 +148,11 @@ body {
   top: 6px;
 }
 
+.current-temp__wrapper {
+  display: flex;
+  align-items: center;
+}
+
 .activate {
   top: -7px;
 }
@@ -153,4 +171,16 @@ body {
   left: 0;
   background: rgb(230, 134, 134);
   transition: all 0.1s;
+}
+
+.loading {
+  position: relative;
+  z-index: 3;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+  margin-left: -35px;
+  top: 2px;
 }
