--- a/style.scss
+++ b/style.scss
@@ -34,6 +34,49 @@ body {
 
    &__title {
    }
+   &__info {
+      display: flex;
+      position: relative;
+      justify-content: space-between;
+      align-items: center;
+      color: rgb(255, 255, 255);
+      font-size: 14px;
+      margin-bottom: 10px;
+      padding: 10px 15px 10px 40px;
+      background: rgb(119, 201, 255);
+      border-radius: 20px;
+      font-weight: 600;
+      letter-spacing: 0.1px;
+      & span {
+         content: '';
+         width: 20px;
+         height: 20px;
+         position: absolute;
+         background: url(/icons/info/info.png);
+         background-repeat: no-repeat;
+         background-position: center;
+         background-size: cover;
+         left: 12px;
+      }
+      & p {
+         margin-right: 5px;
+      }
+   }
+
+   &__info-delete {
+      flex: 0 0 17px;
+      opacity: 0;
+      display: block;
+      position: relative;
+      background: url(/icons/info/close.png);
+      cursor: pointer;
+      transition: all 0.5s;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 17px;
+      height: 17px;
+   }
 
    &__input {
       min-width: 300px;
@@ -41,7 +84,6 @@ body {
       border-radius: 20px;
       padding: 15px 15px;
       font-size: 16px;
-      margin-bottom: 10px;
       border: 0.5px solid #000;
       outline: none;
       transition: all 0.3s;
@@ -54,6 +96,7 @@ body {
       height: 40px;
       background: rgb(142, 226, 142);
       border: none;
+      font-size: 14px;
       border-radius: 20px;
       font-weight: 600;
       transition: all 0.3s;
@@ -88,10 +131,10 @@ body {
 
 .item {
    position: relative;
+   flex: 0 0 215px;
    box-shadow: 0px 0px 30px 4px rgba(34, 60, 80, 0.2);
    top: 0;
    transition: all 0.3s;
-   max-width: 300px;
    padding: 25px;
    border-radius: 20px;
    background-color: #7aaed8;
@@ -105,17 +148,17 @@ body {
    }
 
    &__current-temp {
-      flex: 1 1 auto;
       font-size: 18px;
       margin-bottom: 10px;
       padding-bottom: 10px;
       border-bottom: 1px solid #fff;
       & span {
+         flex: 0 0 auto;
          text-align: center;
          font-size: 70px;
       }
       & img {
-         flex: 1 1 50%;
+         flex: 0 0 auto;
       }
    }
 
@@ -204,4 +247,206 @@ body {
    display: inline-block;
    margin-left: -35px;
    top: 2px;
+}
+
+@media (max-width: 650px) {
+   .item {
+      flex: 0 0 150px;
+      &__title {
+         text-align: center;
+         font-size: 14px;
+         margin-bottom: 5px;
+      }
+   
+      &__current-temp {
+         font-size: 14px;
+         margin-bottom: 10px;
+         padding-bottom: 10px;
+         border-bottom: 1px solid #fff;
+         & span {
+            text-align: center;
+            font-size: 50px;
+         }
+         & img {
+            flex: 0 0 50%;
+         }
+      }
+   
+      &__short-decr {
+         font-size: 12px;
+         font-weight: 600;
+         margin-bottom: 3px;
+      }
+   
+      &__description {
+         display: flex;
+         flex-direction: column;
+         font-weight: 600;
+         font-size: 12px;
+         margin-bottom: 5px;
+   
+         & span {
+            margin-bottom: 3px;
+            &:last-child {
+               margin-bottom: 0;
+            }
+         }
+      }
+      &__delete {
+         display: block;
+         position: absolute;
+         cursor: pointer;
+         transition: all 0.5s;
+         background-size: cover;
+         background-repeat: no-repeat;
+         width: 15px;
+         height: 15px;
+         top: 10px;
+         right: 10px;
+         overflow: hidden;
+         & span {
+            position: relative;
+            top: 7.5px;
+            display: block;
+            width: 100%;
+            height: 1.5px;
+            background: #fff;
+            border-radius: 20px;
+            transform: rotate(45deg);
+            &:last-child {
+               transform: rotate(-45deg);
+               top: 6px;
+            }
+         }
+      }
+   }
+   .form__title {
+      font-size: 25px;
+   }
+
+   
+
+}
+
+@media (max-width: 520px) {
+   .item {
+      flex: 0 0 100px;
+      padding: 15px;
+      &__title {
+         text-align: center;
+         font-size: 12px;
+         margin-bottom: 3px;
+      }
+   
+      &__current-temp {
+         font-size: 12px;
+         margin-bottom: 10px;
+         padding-bottom: 10px;
+         border-bottom: 1px solid #fff;
+         & span {
+            text-align: center;
+            font-size: 30px;
+         }
+         & img {
+            flex: 0 0 50%;
+         }
+      }
+   
+      &__description {
+         display: flex;
+         flex-direction: column;
+         font-weight: 400;
+         font-size: 12px;
+         margin-bottom: 5px;
+   
+         & span {
+            margin-bottom: 3px;
+            &:last-child {
+               margin-bottom: 0;
+            }
+         }
+      }
+   }
+}
+
+@media (max-width: 425px) {
+   .weather {
+      &__container {
+         display: flex;    
+         flex-wrap: wrap; 
+         justify-content: center; 
+      }
+   }
+   .item {
+      position: relative;
+      flex: 0 0 215px;
+      box-shadow: 0px 0px 30px 4px rgba(34, 60, 80, 0.2);
+      top: 0;
+      transition: all 0.3s;
+      padding: 25px;
+      border-radius: 20px;
+      background-color: #7aaed8;
+      color: #fff;
+      display: flex;
+      flex-direction: column;   
+      &__title {
+         text-align: center;
+         font-size: 16px;
+         margin-bottom: 10px;
+      }
+   
+      &__current-temp {
+         flex: 0 0 auto;
+         font-size: 18px;
+         margin-bottom: 10px;
+         padding-bottom: 10px;
+         border-bottom: 1px solid #fff;
+         & span {
+            text-align: center;
+            font-size: 70px;
+         }
+         & img {
+            flex: 0 0 50%;
+         }
+      }
+   
+      &__short-decr {
+         font-size: 16px;
+         font-weight: 600;
+         margin-bottom: 3px;
+      }
+   
+      &__description {
+         display: flex;
+         flex-direction: column;
+         font-weight: 600;
+         font-size: 16px;
+         margin-bottom: 10px;
+   
+         & span {
+            margin-bottom: 3px;
+            &:last-child {
+               margin-bottom: 0;
+            }
+         }
+      }
+   }
+   .form {
+
+      &__city {
+      }
+   
+      &__title {
+      }
+   
+      &__input {
+         min-width: 100px;
+      }
+   }
+}
+
+@media (max-width: 1100px) {
+   .form__info-delete {
+      opacity: 1 !important;
+   }
 }
